--- a/exercise/package.json
+++ b/exercise/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clock-hooks",
+  "name": "exercise",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
